# SimpleLog

./: .gitignore  README.md  clang-format
example/: CMakeLists.txt  example.cc
example/log/: file_log.cc  log.cc  log.h
example/time/: time_util.cc  time_util.h
src/log/: file_log.cc  file_log.h  log.cc  log.h
src/time/: time_util.h
